<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookDetails"
    android:background="@color/light_grey"
    android:scrollbarSize="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey">

        <ImageView
            android:id="@+id/BookImage"
            android:layout_width="170dp"
            android:layout_height="245dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="55dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_background">

        </ImageView>

        <Button
            android:id="@+id/btnCurrentlyReading"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/BookImage"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="11dp"
            android:layout_toEndOf="@+id/BookImage"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/currently_reading"
            android:textAllCaps="true"
            android:textColor="@color/light_light_grey"
            android:textStyle="bold">

        </Button>

        <Button
            android:id="@+id/btnAlreadyRead"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnCurrentlyReading"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="14dp"
            android:layout_toEndOf="@+id/BookImage"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/already_read"
            android:textColor="@color/light_light_grey"
            android:textStyle="bold">

        </Button>

        <Button
            android:id="@+id/btnAddToFav"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnAlreadyRead"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="14dp"
            android:layout_toEndOf="@+id/BookImage"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/add_to_favorites"
            android:textColor="@color/light_light_grey"
            android:textStyle="bold">

        </Button>

        <Button
            android:id="@+id/btnWishList"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnAddToFav"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="14dp"
            android:layout_toEndOf="@+id/BookImage"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/add_to_wishlist"
            android:textColor="@color/light_light_grey"
            android:textStyle="bold">

        </Button>

        <TextView
            android:id="@+id/txtBookName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnWishList"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/BOOK_NAME"
            android:textColor="@color/light_light_grey"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/BookName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnWishList"
            android:layout_alignStart="@+id/PublishedDate"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@+id/txtBookName"
            android:text="@string/game_of_thrones"
            android:textColor="@color/light_light_grey"
            android:textSize="20sp"
            android:textStyle="bold|italic">

        </TextView>


        <TextView
            android:id="@+id/txtAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtBookName"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/author"
            android:textColor="@color/light_light_grey"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/Author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BookName"
            android:layout_alignStart="@+id/PublishedDate"
            android:layout_alignTop="@+id/txtAuthor"
            android:layout_toEndOf="@+id/txtAuthor"
            android:text="@string/AuthorName"
            android:textColor="@color/light_light_grey"
            android:textSize="20sp"
            android:textStyle="bold|italic">

        </TextView>


        <TextView
            android:id="@+id/txtPages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtAuthor"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/bookPagesText"
            android:textColor="@color/light_light_grey"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/Pages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Author"
            android:layout_alignStart="@+id/PublishedDate"
            android:layout_alignTop="@+id/txtPages"
            android:layout_toEndOf="@+id/txtPages"
            android:text="@string/_3000"
            android:textColor="@color/light_light_grey"
            android:textSize="20sp"
            android:textStyle="bold|italic">

        </TextView>

        <TextView
            android:id="@+id/txtPublish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPages"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/year_of_publication"
            android:textColor="@color/light_light_grey"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>


        <TextView
            android:id="@+id/PublishedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Pages"
            android:layout_alignTop="@+id/txtPublish"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/txtPublish"
            android:text="@string/_3000"
            android:textColor="@color/light_light_grey"
            android:textSize="20sp"
            android:textStyle="bold|italic">

        </TextView>


        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPublish"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/overview"
            android:textColor="@color/light_light_grey"
            android:textSize="26sp"
            android:textStyle="bold">

        </TextView>


        <TextView
            android:id="@+id/Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDescription"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/long_description"
            android:textColor="@color/light_light_grey"
            android:textSize="20sp">

        </TextView>

        <Button
            android:id="@+id/btnGetBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Description"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            android:text="Get Book"
            android:textColor="@color/light_light_grey">

        </Button>










    </RelativeLayout>

</ScrollView>